# janus

./: Cargo.toml  README.md  demo.sh  run_example.sh  start_chrome.sh
crates/janus-browser-chrome/: Cargo.toml
crates/janus-browser-chrome/src/: actors.rs  browser.rs  error.rs  lib.rs  page.rs  protocol.rs
crates/janus-browser-chrome/tests/: browser_actor_tests.rs
crates/janus-chrome/: Cargo.toml
crates/janus-chrome/examples/: basic.rs  navigation.rs
crates/janus-chrome/src/: actor.rs  config.rs  error.rs  launcher.rs  lib.rs  protocol.rs
crates/janus-chrome/src/browser/: handlers.rs  messages.rs  mod.rs
crates/janus-client/: Cargo.toml
crates/janus-client/src/: error.rs  launch.rs  lib.rs  supervisor.rs
crates/janus-core/: Cargo.toml
crates/janus-core/src/: config.rs  error.rs  lib.rs  logging.rs
crates/janus-core/src/actor/: command.rs  connection.rs  event.rs  messages.rs  mod.rs  supervisor.rs
crates/janus-core/src/config/: mod.rs
crates/janus-core/src/error/: mod.rs
crates/janus-core/src/transport/: connection.rs  mod.rs  websocket.rs
crates/janus-interfaces/: Cargo.toml
crates/janus-interfaces/src/: browser.rs  common.rs  error.rs  lib.rs  page.rs
crates/janus-protocol-handler/: Cargo.toml
crates/janus-protocol-handler/src/: command_actor.rs  event_actor.rs  lib.rs  messages.rs
crates/janus-transport/: Cargo.toml
crates/janus-transport/src/: connection.rs  error.rs  factory.rs  lib.rs  traits.rs  types.rs  websocket.rs
docs/cdp/: brower.md
docs/design/: ACTORS.md  Janus_Architecture.md
examples/: basic_chrome.rs  chrome_demo.rs  connect_chrome.rs  minimal_chrome.rs
