[package]
name = "janus"
version = "0.1.0"
edition = "2024"

[dependencies]


[workspace]
members = [
    "crates/janus-interfaces",
    "crates/janus-core",
    "crates/janus-transport",
    "crates/janus-protocol-handler", # Keep structure, even if empty for now
    "crates/janus-browser-chrome",   # Keep structure, even if empty for now
    "crates/janus-client",           # The actual library crate users depend on
]
resolver = "2"

[workspace.dependencies]
# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Actor Framework
actix = "0.13"

# Logging
log = "0.4"
# Choose one logger implementation, e.g., env_logger or tracing-subscriber
env_logger = "0.11"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"

# Configuration
config = { version = "0.14", features = [
    "toml",
    "env",
] } # Updated version, added "env" feature

# # WebSocket Transport (Optional)
# tokio-tungstenite = { version = "0.21", optional = true, features = [
#     "native-tls",
#     "rustls-tls-native-roots",
# ] } # Example TLS features

# WebSocket Transport
tokio-tungstenite = { version = "0.21", features = [
    "native-tls",
    "rustls-tls-native-roots",
] } # Example TLS features

# Internal Crates (Makes dependency declarations cleaner)
janus-interfaces = { path = "crates/janus-interfaces" }
janus-core = { path = "crates/janus-core" }
janus-transport = { path = "crates/janus-transport" }
janus-protocol-handler = { path = "crates/janus-protocol-handler" }
janus-browser-chrome = { path = "crates/janus-browser-chrome" }
