[package]
name = "janus-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies
janus-interfaces = { workspace = true }
janus-core = { workspace = true }
janus-transport = { workspace = true, features = [
    "websocket",
] } # Ensure websocket is enabled
janus-protocol-handler = { workspace = true }
janus-browser-chrome = { workspace = true }

# External dependencies
tokio = { workspace = true }
actix = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true } # Added for json! macro potentiallyor

[dev-dependencies]
# Add test dependencies, e.g., for E2E tests later
# static_assertions = "1.1.0"
