[package]
name = "janus-core"
version = "0.1.0"
edition = "2024"

[features]
# Enable WebSocket related configurations
websocket = []
# Enable env_logger based logging initialization
env_logger = ["dep:env_logger"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# Optional dependencies
env_logger = { workspace = true, optional = true }

[dev-dependencies]
# Test dependencies
tempfile = "3.8" # For testing config file loading
